# crypto_prices

./: .gitignore  .python-version  Dockerfile  README.md  _secrets.py.example  alembic.ini  main.py  makefile  pyproject.toml  settings.py
adapter/: __init__.py  http_price_sourcing_repository.py  price_tg_repository.py  sql_price_repository.py
database/: __init__.py  alchemy.py
database/alembic/: env.py
database/alembic/versions/: 3b0906e9a392_added_price_table.py  dc72b926645b_make_table.py
database/models/: __init__.py  base.py  crypto_price.py
domain/: price.py  price_db_repository.py  price_sourcing_repository.py  price_tg_repository.py
usecases/: check_targets.py
utils/: enums.py  logging.py  singletone.py  weakref.py
