[project]
name = "crypto-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "httpx[http2]>=0.28.1",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "sqlalchemy[aiosqlite]>=2.0.44, <2.1",
    "structlog>=25.5.0",
    "telethon[cryptg]>=1.42.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a29",
]

[tool.ty.src]
exclude = ["./.venv", "./venv", "**/.venv/", ".venv/lib/pypy3.11"]
